<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_MCHMIPrepareScreen_01_XX" Id="{e5c41a77-0f06-04e9-1d51-b2d6d911a624}">
    <Declaration><![CDATA[TYPE ST_MCHMIPrepareScreen_01_XX :
STRUCT
	stListElement			: ST_MCElementListWithParameter;
	itfSelectElement		: ITF_BaseComponent_HMI;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>