<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_MCHMIPrepareDataForScreen_01_XX" Id="{62188713-537e-0ba6-3aee-7a017ce7ab57}" SpecialFunc="None">
    <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		20.11.2025		TC 4024.66
	Moduł przygotowania danych dla Okna parametrów we wsztsystkich trybach
*)
FUNCTION_BLOCK FB_MCHMIPrepareDataForScreen_01_XX EXTENDS FB_MCHMIPrepareDataForScreen IMPLEMENTS ITF_MCHMIPrepareDataForScreen
VAR
	itfMachineControlHMI	: ITF_MCHMIMachineControl_HMI_PrepScr_01_XX;
	refstData				: REFERENCE TO ST_MCHMIPrepareScreen_01_XX;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Folder Name="ITF_PDFS" Id="{88be56d6-550f-028a-26d5-d43e2e2a4238}" />
    <Method Name="ClearAfterScreen" Id="{a8c50998-1268-0361-3361-f40b48e5bd11}" FolderPath="ITF_PDFS\">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		19.11.2025		TC 4024.66
	Czyści danych przy zmienia ramki po poprzedniej ramce
*)
METHOD PUBLIC ClearAfterScreen : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[SUPER^.ClearAfterScreen ();
]]></ST>
      </Implementation>
    </Method>
    <Method Name="CreateListName" Id="{dfb83b60-14e0-0020-26db-362d83675795}">
      <Declaration><![CDATA[METHOD PRIVATE CreateListName
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.itfMachineControlHMI.GetElementNamesWithParameter (
	stDane := THIS^.refstData.stListElement
);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="LinkDataHMI_01_XX" Id="{0241f470-6f5d-05e7-0457-a5cdb3f66823}">
      <Declaration><![CDATA[METHOD PUBLIC LinkDataHMI_01_XX : BOOL
VAR_INPUT
	refstData				: REFERENCE TO ST_MCHMIPrepareScreen_01_XX;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.refstData REF= refstData;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="LinkMachineControlHMI" Id="{be4941eb-3101-0648-3fed-d300417ecd90}">
      <Declaration><![CDATA[METHOD PUBLIC LinkMachineControlHMI : BOOL
VAR_INPUT
	fbMachineControlHMI	: ITF_MCHMIMachineControl_HMI_PrepScr_01_XX;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[this^.itfMachineControlHMI := fbMachineControlHMI;]]></ST>
      </Implementation>
    </Method>
    <Method Name="PrepareDataForHMI" Id="{4067778e-275e-044f-0fd9-c3f95f0c4867}" FolderPath="ITF_PDFS\">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		14.11.2025		TC 4024.66
	Metoda przygotowywania danych dla HMI 
	W niej odbywa się odpytywanie właściego elementu przez łącznik
*)
METHOD PUBLIC PrepareDataForHMI : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF (THIS^.refstHMICommonData.bChangePage) THEN
	THIS^.CreateListName ();
END_IF





SUPER^.PrepareDataForHMI ();
]]></ST>
      </Implementation>
    </Method>
    <Method Name="PrepareForScreen" Id="{af3a1d4b-6467-08de-039f-018bb4326fe0}" FolderPath="ITF_PDFS\">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		19.11.2025		TC 4024.66
	Przygotowanie ramki pood tamke do wyświetlenia - tylko przygotowanie a nie przygotowanie danych do wyświetlenia
*)
METHOD PUBLIC PrepareForScreen : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[SUPER^.PrepareForScreen ();
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>